--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -124,7 +124,7 @@
       }
     },
     "ratingRisers": {
-      "title": "Nädala Tõusjad"
+      "title": "Nädala Tegijad"
     }
   },
   "feedback": {
