--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2106,8 +2106,8 @@
     "head_referee": "Head referee",
     "head_referee_placeholder": "Enter head referee name",
     "final_score": "Final score",
-    "download": "Download protocol",
-    "download_lottery_sheet": "Download draw protocol",
+    "download": "Umpire protocol",
+    "download_lottery_sheet": "Draw protocol",
     "start_game": "Start game",
     "reset_game": "Reset game",
     "finish_game": "Finish game",
