minor front end fixesw

--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -2142,7 +2142,7 @@
     "download_lottery_sheet": "Ülesandmisleht",
     "start_game": "Alusta mängu",
     "reset_game": "Lähtesta mäng",
-    "finish_game": "Lõpeta mäng",
+    "finish_game": "Lõpeta Kohtumine",
     "game_finished": "Mäng lõpetatud",
     "choose_player": "Vali mängija"
   },
