added player search for licenses

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -337,6 +337,9 @@
   "licenses": {
     "title": "Licenses",
     "page_title": "Player License Purchase/Renewal",
+    "quick_lookup": {
+      "title": "Player Lookup"
+    },
     "add_player": {
       "title": "Add Player",
       "search_placeholder": "Search for existing player...",
