--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -608,7 +608,7 @@
     "results": {
       "groups": "Grupid",
       "finished": "Lõppenud",
-      "teams": "Meeskond",
+      "teams": "Võistkond",
       "solo_team": "Võistleja",
       "total_points": "Punktid kokku",
       "placement": "Paremusjärjestus",
